# ftracker

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json  render.yaml
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 20260407_seed_demo_finance_data.py  20260407_seed_more_demo_transactions.py
backend/: Dockerfile
backend/app/: main.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: __init__.py  categories.py  dashboard.py  health.py  login.py  transactions.py  users.py
backend/app/core/: config.py  db.py  security.py
backend/app/crud/: category.py  transactions.py  user.py
backend/app/models/: __init__.py  category.py  common.py  transactions.py  users.py
backend/app/services/: dashboard.py
frontend/: .gitignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  not-found.tsx  page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/signin/: page.tsx
frontend/src/app/(finance)/: layout.tsx
frontend/src/app/(finance)/categories/: page.tsx
frontend/src/app/(finance)/dashboard/: page.tsx
frontend/src/components/auth/: SignInForm.tsx
frontend/src/components/common/: GridShape.tsx
frontend/src/components/finance/: DashboardOverview.tsx
frontend/src/components/form/: date-picker.tsx
frontend/src/components/header/: UserDropdown.tsx
frontend/src/layout/: AppHeader.tsx
frontend/src/lib/: api.ts  auth.ts  rbac.ts
frontend/src/types/: finance.ts
(+5 files in other folders)
