[project]
name = "ftracker"
version = "0.1.0"
description = "Finance dashboard backend and frontend for role-based data tracking"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.135.3",
    "psycopg[binary]>=3.2.12",
    "pydantic-settings>=2.13.1",
    "sentry-sdk>=2.57.0",
    "sqlalchemy>=2.0.48",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
